<resources>
    <string name="app_name">Simulator</string>
    <string name="cd_fab_Simulate">Match Simulator Button</string>
    <string name="cd_home_team_flag">Home Team Flag</string>
    <string name="cd_away_team_flag">Away Team Flag</string>
    <string name="cd_home_team_name">Home Team Name</string>
    <string name="home_name_team">Home Team</string>
    <string name="away_team_name">Away Team</string>
    <string name="cd_name_away_team">Away Team Name</string>
    <string name="cd_versus">vs</string>
    <string name="versus_simbol">X</string>
    <string name="gols_home_team">99</string>
    <string name="cd_home_team_gols">Gols Home Team</string>
    <string name="away_team_gols">99</string>
    <string name="cd_gols_away_team">Away Team Gols</string>
    <string name="cd_swipe_refresh_layout">Swipe Refresh Layout</string>
    <string name="cd_recycler_view">Recycler View</string>
    <string name="cd_constraint_layout">Constraint Layout</string>
    <string name="error_api">Unexpected error</string>
    <string name="api_error">unexpected error</string>
</resources>