<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:contentDescription="@string/cd_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlMatch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_swipe_refresh_layout"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMatch"
            android:contentDescription="@string/cd_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/match_item"
            tools:itemCount="3"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabRandomMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/cd_fab_Simulate"
        app:srcCompat="@drawable/ic_dice" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>